# clojure-lora-training

./: .gitignore  2501.04694v3.md  README.md  config.json.sample  pyproject.toml  requirements.txt  restyle.py
.beads/: interactions.jsonl  issues.jsonl  metadata.json
configs/: codeflow_full_qwen.yaml  codeflow_lora_qwen.yaml  dataset_info.codeflow.json
docs/: architecture.md  chinking.md  fused_models.md  gemini_cleanup.md  gertrude-blog.md  grammar_correction.md  humanization_plan.md  inference.md  input_graph_building.md  input_text_format.md  latest_findings.md  local_rtt_model.md  lora_persona_training.md  lora_training.md  lora_training_strategy.md  lovecraft_lora.md  narrative_wrapper.md  neutralization.md  papers.md  qwen25_training.md  qwen35_training.md  runpod.md  sentence_control.md  structural_RAG_improvements.md  style_rag.md  style_transfer.md  style_transfer_training.md  text_variation.md  training_findings.md  verification.md
notes/: experiment_summary.md
prompts/: convert_perspective.txt  howard_russell_worldview.txt  narrativize.txt  rtt_deepseek.txt  rtt_deepseek_batch.txt  rtt_to_english.txt  russell_worldview.txt  sagan_worldview.txt  semantic_fidelity.txt
scripts/: add_perspective_variations.py  assemble_codeflow_dataset.py  augment_training_data.py  cleanup_checkpoints.sh  convert_peft_to_mlx.py  download_model.py  download_model_instructions.md  download_model_manual.py  experiment_blend_sentences.py  filter_training_data.py  fuse_and_quantize_awq.py  fuse_model.py  generate_blended_training.py  generate_flat_training.py  load_corpus.py  (+8 more)
(+140 files in other folders)
